--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+  "id": "mindmap-viewer",
+  "name": "Mindmap Viewer",
+  "version": "1.0.0",
+  "minAppVersion": "0.15.0",
+  "description": "Preview FreeMind (.mm) and XMind (.xmind) files as structured Markdown with hierarchical headers and bullet points for leaf nodes.",
+  "author": "Your Name",
+  "authorUrl": "https://yourwebsite.com",
+  "fundingUrl": "https://buymeacoffee.com/yourname",
+  "isDesktopOnly": false
 }
